--- a/splash.html
+++ b/splash.html
@@ -11,6 +11,9 @@
 <body>
 
 	<div id="splash-background" class="backstretch">
+
+	<div id="inner">
+
 		<div class="sidebar" id="bar1"></div>
 		<div class="sidebar" id="bar2"></div>
 		<div class="bar-opaque">
@@ -29,13 +32,23 @@
 		</div>
 
 		<div id="about" class="lightdiv animated fadeInUpBig fadeOutDownBig"><img src="images/head.png" class="head">
-		boop.
+		<div class='title'>boop.</div>
 		</div>
-		<div id="code" class="lightdiv animated fadeInUpBig fadeOutDownBig">Code div will be opened in a lightbox</div>
-		<div id="cont" class="lightdiv animated fadeInUpBig fadeOutDownBig">Contact div will be opened in a lightbox</div>
-		
+		<div id="code" class="lightdiv animated fadeInUpBig fadeOutDownBig"><div class='title'>projects.</div>
+		<a href="http://www.github.com/kamiboers">
+		<img src="images/githubmark.png" height='50' alt="go to github"> </a>
+		</div>
+		<div id="cont" class="lightdiv animated fadeInUpBig fadeOutDownBig"><div class='title'>get in touch.</div>
+		<a href="mailto:kamiboers@gmail.com" class="touch">
+		kamiboers@gmail.com
+		</a>
+		<br>303.726.5267<br>
+		</div>
+
+		</div>
 
 	</div>
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/page.js"></script>
 </body>
