--- a/splash.html
+++ b/splash.html
@@ -3,14 +3,21 @@
 
 <head>
 	<title>Kami Boers, Web Developer</title>
+	<link rel="stylesheet" type="text/css" href="./css/reset.css">  
 	<link rel="stylesheet" type="text/css" href="./css/custom.css">  
 	<link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
 </head>
 
 <body>
 
-	<div id="splash-background" class="backstretch">
-
+	<div class="backstretch"></div>
+	
+	<div class="inner">
+		<div class="sidebar">
+			<div class="sb-trans"></div>
+			<div class="sb-opaque"></div>
+		</div>
+	</div>
 
 </body>
 
