--- a/splash.html
+++ b/splash.html
@@ -14,8 +14,8 @@
 	
 	<div class="inner">
 		<div class="sidebar">
-			<div class="sb-trans"></div>
-			<div class="sb-opaque"></div>
+			<div id="sb-trans"></div>
+			<div id="sb-opaque"></div>
 		</div>
 	</div>
 
