--- a/splash.html
+++ b/splash.html
@@ -15,10 +15,12 @@
 	<div class="inner">
 		<div class="sidebar">
 			<div id="sb-trans"></div>
-			<div id="sb-opaque"></div>
+			<div id="sb-opaque">hey girl</div>
 		</div>
 	</div>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/page.js"></script>
 </body>
 
 </html>
