--- a/splash.html
+++ b/splash.html
@@ -13,9 +13,14 @@
 	<div class="backstretch"></div>
 	
 	<div class="inner">
-		<div class="sidebar">
+		<div id="sidebar">
+			<div id="title">kami boers</div>
+				<div class="links">
+					<div id='about'>about.</div>
+					<div id='code'>code.</div>
+					<div id='contact'>contact.</div>
+				</div>
 			<div id="sb-trans"></div>
-			<div id="sb-opaque">hey girl</div>
 		</div>
 	</div>
 
