animation and z-index

--- a/splash.html
+++ b/splash.html
@@ -16,9 +16,9 @@
 		<div id="sidebar">
 			<div id="title">kami boers</div>
 				<div class="links">
-					<div id='about'>about.</div>
-					<div id='code'>code.</div>
-					<div id='contact'>contact.</div>
+					<span id='about'><a href="#">about.</a></span>
+					<span id='code'><a href="#">code.</a></span>
+					<span id='contact'><a href="#">contact.</a></span>
 				</div>
 			<div id="sb-trans"></div>
 		</div>
