--- a/splash.html
+++ b/splash.html
@@ -22,6 +22,11 @@
 				</div>
 			<div id="sb-trans"></div>
 		</div>
+
+		<div class="panel" id="about"></div>
+		<div class="panel" id="code"></div>
+		<div class="panel" id="contact"></div>
+		
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
