--- a/splash.html
+++ b/splash.html
@@ -16,18 +16,18 @@
 		<div id="sidebar">
 			<div id="title">kami boers</div>
 				<div class="links">
-					<span id='about'><a href="#">about.</a></span>
-					<span id='code'><a href="#">code.</a></span>
-					<span id='contact'><a href="#">contact.</a></span>
+					<div id='about'><a href="#">about.</a></div>
+					<div id='code'><a href="#">code.</a></div>
+					<div id='contact'><a href="#">contact.</a></div>
 				</div>
 			<div id="sb-trans"></div>
 		</div>
-
-		<div class="panel" id="about"></div>
-		<div class="panel" id="code"></div>
-		<div class="panel" id="contact"></div>
-		
 	</div>
+
+	<div class="panel" id="about"></div>
+	<div class="panel" id="code"></div>
+	<div class="panel" id="contact"></div>
+		
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/page.js"></script>
