--- a/splash.html
+++ b/splash.html
@@ -24,9 +24,9 @@
 		</div>
 	</div>
 
-	<div class="panel" id="about"></div>
-	<div class="panel" id="code"></div>
-	<div class="panel" id="contact"></div>
+	<div class="panel animated" id="about"></div>
+	<div class="panel animated" id="code"></div>
+	<div class="panel animated" id="contact"></div>
 		
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
