clean up opacity and animation

--- a/splash.html
+++ b/splash.html
@@ -5,6 +5,7 @@
 	<title>Kami Boers, Web Developer</title>
 	<link rel="stylesheet" type="text/css" href="./css/reset.css">  
 	<link rel="stylesheet" type="text/css" href="./css/custom.css">  
+	<link rel="stylesheet" type="text/css" href="./css/animate.css">  
 	<link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
 </head>
 
@@ -22,12 +23,11 @@
 				</div>
 			<div id="sb-trans"></div>
 		</div>
-	</div>
 
-	<div class="panel animated" id="about"></div>
-	<div class="panel animated" id="code"></div>
-	<div class="panel animated" id="contact"></div>
-		
+	<div class="panel animated" id="about-panel"></div>
+	<div class="panel animated" id="code-panel"></div>
+	<div class="panel animated" id="contact-panel"></div>
+	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/page.js"></script>
