--- a/splash.html
+++ b/splash.html
@@ -24,9 +24,15 @@
 			<div id="sb-trans"></div>
 		</div>
 
-	<div class="panel animated" id="about-panel"></div>
-	<div class="panel animated" id="code-panel"></div>
-	<div class="panel animated" id="contact-panel"></div>
+	<div class="panel animated" id="about-panel">
+		HELLOOOOOO
+	</div>
+	<div class="panel animated" id="code-panel">
+		CODEEEEEEe
+	</div>
+	<div class="panel animated" id="contact-panel">
+		CONTACTTTTT
+	</div>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
