--- a/splash.html
+++ b/splash.html
@@ -6,35 +6,48 @@
 	<link rel="stylesheet" type="text/css" href="./css/reset.css">  
 	<link rel="stylesheet" type="text/css" href="./css/custom.css">  
 	<link rel="stylesheet" type="text/css" href="./css/animate.css">  
-	<link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
 </head>
 
 <body>
 
 	<div class="backstretch"></div>
-	
+
 	<div class="inner">
 		<div id="sidebar">
 			<div id="title">kami boers</div>
-				<div class="links">
-					<div id='about'><a href="#">about.</a></div>
-					<div id='code'><a href="#">code.</a></div>
-					<div id='contact'><a href="#">contact.</a></div>
-				</div>
+			<div class="links">
+				<div id='about'><a href="#" class='side'>about.</a></div>
+				<div id='code'><a href="#" class='side'>code.</a></div>
+				<div id='contact'><a href="#" class='side'>contact.</a></div>
+			</div>
 			<div id="sb-trans"></div>
 		</div>
 	</div>
 
 	<div class="panel animated" id="about-panel">
-		HELLOOOOOO
+	<div class="inner-panel">
+		<img src="images/head2.png" class="headshot">
+		<span class='panel-body'> I am a  recent graduate of <span class="inline-link"><a target="_blank" href="https://www.turing.io">Turing School of Software and Design</a></span> in Denver, Colorado. Turing's intensive, seven-month program certifies full stack developers with experience stretching from Ruby to Rails to HTML, CSS and JavaScript and beyond. </span>
+	</div>
 	</div>
 	<div class="panel animated" id="code-panel">
-		CODEEEEEEe
+		<div class="inner-panel">
+		<div class='title'>projects.</div>
+		<a href="http://www.github.com/kamiboers">
+			<img src="images/githubmark.png" height='50' alt="go to github">
+		</a>
+	</div>
 	</div>
 	<div class="panel animated" id="contact-panel">
-		CONTACTTTTT
+		<div class="inner-panel">
+		<div class='title'>get in touch.</div>
+		<a href="mailto:kamiboers@gmail.com" class="touch">
+			kamiboers@gmail.com
+		</a>
+		<br>303.726.5267<br>
 	</div>
-	
+	</div>
+
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/page.js"></script>
