style and images

--- a/splash.html
+++ b/splash.html
@@ -27,19 +27,23 @@
 	<div class="panel animated" id="about-panel">
 	<div class="inner-panel">
 		<img src="images/head2.png" class="headshot">
-		<span class='panel-body'> I am a  recent graduate of <span class="inline-link"><a target="_blank" href="https://www.turing.io">Turing School of Software and Design</a></span> in Denver, Colorado. Turing's intensive, seven-month program certifies full stack developers with experience stretching from Ruby to Rails to HTML, CSS and JavaScript and beyond. </span>
+		<span class='panel-body'> I am a recent graduate of <span class="inline-link"><a target="_blank" href="https://www.turing.io">Turing School of Software and Design</a></span> in Denver, Colorado. Turing's intensive, seven-month program certifies full stack developers with experience stretching from Ruby to Rails to HTML, CSS and JavaScript and beyond. </span>
 	</div>
 	</div>
 	<div class="panel animated" id="code-panel">
-		<div class="inner-panel">
-		<div class='title'>projects.</div>
+		<div class="inner-panel panel-center">
+		<div class='title'>projects.<br><br>
 		<a href="http://www.github.com/kamiboers">
 			<img src="images/githubmark.png" height='50' alt="go to github">
 		</a>
+		</div>
+		<img src="images/qbertstatic.png" id="qbert" alt="Q*Bert" class="project">
+		<img src="images/ideaboxstatic.png" id="ideabox" alt="IdeaBox" class="project">
+		<img src="images/fitbeatstatic.png" id="fitbeat" alt="FitBeat" class="project">
 	</div>
 	</div>
 	<div class="panel animated" id="contact-panel">
-		<div class="inner-panel">
+		<div class="inner-panel panel-center">
 		<div class='title'>get in touch.</div>
 		<a href="mailto:kamiboers@gmail.com" class="touch">
 			kamiboers@gmail.com
