--- a/splash.html
+++ b/splash.html
@@ -35,18 +35,15 @@
 				<li>JavaScript</li>
 				<li>jQuery</li>
 				<li>AJAX</li>
-				<li>Ruby</li>
-				<li>Rails</li>
+				<li>Ruby on Rails</li>
 				<li>ActiveRecord</li>
 				<li>PostgreSQL</li>
 				<li>Sinatra</li>
-				<li>HTML</li>
-				<li>CSS</li>
+				<li>HTML/CSS</li>
 				<li>GitHub</li>
-				<li>MiniTest</li>
-				<li>RSpec</li>
+				<li>MiniTest/RSpec</li>
 				<li>Capybara</li>
-				<li>TDD</li>
+				<li>TDD/BDD</li>
 			</ul>
 		</div>
 
@@ -63,6 +60,15 @@
 		I am also a traveler, poker enthusiast, rock climber, lover of languages, dog wrangler, and general enthusiast of life.  With a background in veterinary care and extensive customer service experience, I have a knack for quick, flexible and amicable problem solving, and thrive in a team environment. I hope to develop a career characterized by continual learning, collaboration and sharing of knowledge with others.
 		</p>
 		</span>
+		<div id="about-links">
+			<span class="icon-link spaced-link"><a href="kboers-resume.pdf">
+			<img src="images/resume-icon.png" height="40px"></a></span>
+			<span class="icon-link spaced-link"><a href="https://www.github.com/kamiboers">
+			<img src="images/github-icon.png" height="40px"></a></span>
+			<span class="icon-link spaced-link"><a href="https://www.linkedin.com/in/kamiboers">
+			<img src="images/linkedin-icon.png" height="40px"></a></span>
+
+		</div>
 	</div>
 	</div>
 	</div>
@@ -79,7 +85,7 @@
 		<div class="project-body">
 		A fitness music app consuming Fitbit and Spotify APIs. FitBeat pulls in daily heart rate data, displays it on a dashboard and allows the user to create and populate Spotify playlists whose BPM falls within the ranges of Fitbit's exercise heart rate categories. This project uses Ruby on Rails, OAuth2 authorization, jQuery, RSpec, and VCR to test API interaction.</div>
 		<span class="project-links">
-		<br><a href="https://github.com/kamiboers/fitbeat">View on GitHub <img src="images/github-icon.png" width="20px"></a><br><a href="https://ftbt.herokuapp.com/">View Production (Demo)</a></span>
+		<br><a href="https://github.com/kamiboers/fitbeat">View on GitHub <img src="images/github-icon.png" width="20px"></a><br><a href="">[ Production Demo <br>coming soon ]</a></span>
 		</div>
 		
 		<div class='project-card'>
@@ -117,6 +123,15 @@
 			kamiboers@gmail.com
 		</a>
 		<br>303.726.5267<br></span>
+			<div id="about-links">
+			<span class="icon-link spaced-link"><a href="kboers-resume.pdf">
+			<img src="images/resume-icon.png" height="40px"></a></span>
+			<span class="icon-link spaced-link"><a href="https://www.github.com/kamiboers">
+			<img src="images/github-icon.png" height="40px"></a></span>
+			<span class="icon-link spaced-link"><a href="https://www.linkedin.com/in/kamiboers">
+			<img src="images/linkedin-icon.png" height="40px"></a></span>
+
+		</div>
 	</div>
 	</div>
 
