--- a/splash.html
+++ b/splash.html
@@ -85,7 +85,7 @@
 		<div class="project-body">
 		A fitness music app consuming Fitbit and Spotify APIs. FitBeat pulls in daily heart rate data, displays it on a dashboard and allows the user to create and populate Spotify playlists whose BPM falls within the ranges of Fitbit's exercise heart rate categories. This project uses Ruby on Rails, OAuth2 authorization, jQuery, RSpec, and VCR to test API interaction.</div>
 		<span class="project-links">
-		<br><a href="https://github.com/kamiboers/fitbeat">View on GitHub <img src="images/github-icon.png" width="20px"></a><br><a href="">[ Production Demo <br>coming soon ]</a></span>
+		<br><a href="https://github.com/kamiboers/fitbeat">View on GitHub <img src="images/github-icon.png" width="20px"></a><br><a href="#">[ Production Demo <br>coming soon ]</a></span>
 		</div>
 		
 		<div class='project-card'>
