--- a/splash.html
+++ b/splash.html
@@ -48,13 +48,13 @@
 			<div class="inner-panel-text">
 				<span class='panel-body'> 
 					<p class='about-paragraph'>
-						I am a recent graduate of <span class="inline-link"><a target="_blank" href="https://www.turing.io">Turing School of Software and Design</a></span> in Denver, Colorado. Turing's intensive program certifies full stack web developers with experience stretching from Ruby to Rails to JavaScript, HTML, CSS and beyond. 
+						I am a recent graduate of <span class="inline-link"><a target="_blank" href="http://www.turing.io">Turing School of Software and Design</a></span> in Denver, Colorado. Turing's intensive program certifies full stack web developers with experience stretching from Ruby to Rails to JavaScript, HTML, CSS and beyond. 
 					</p>
 					<p class='about-paragraph'>
 						As a software developer, I approach problems with thoughtful analysis and good humor. I enjoy the challenge and open-ended problem solving that software engineering represents. I am a methodical, persistent debugger who will doggedly chase solutions. I balance a passion for logic with a love of design, and am always looking for ways to improve, streamline and develop the systems in which I am working.
 					</p>
 					<p class='about-paragraph'>
-						I am also a traveler, poker enthusiast, rock climber, lover of languages, dog wrangler, and general enthusiast of life.  With a background in veterinary care and extensive customer service experience, I have a knack for quick, flexible and amicable problem solving, and thrive in a team environment. I hope to build a career characterized by continual learning, collaboration and sharing of knowledge with others.
+						I am also a traveler, poker fan, rock climber, lover of languages, dog wrangler, and general enthusiast of life.  With a background in veterinary care and extensive customer service experience, I have a knack for quick, flexible and amicable problem solving, and thrive in a team environment. I hope to build a career characterized by continual learning, collaboration and sharing of knowledge with others.
 					</p>
 				</span>
 				<div id="about-links">
@@ -62,10 +62,10 @@
 						<a target="_blank" href="kboers-resume.pdf"><img src="images/resume-icon.png" height="40px"></a>
 					</span>
 					<span class="icon-link spaced-link">
-						<a target="_blank" href="https://www.github.com/kamiboers"><img src="images/github-icon.png" height="40px"></a>
+						<a target="_blank" href="http://www.github.com/kamiboers"><img src="images/github-icon.png" height="40px"></a>
 					</span>
 					<span class="icon-link spaced-link">
-						<a target="_blank" href="https://www.linkedin.com/in/kamiboers"><img src="images/linkedin-icon.png" height="40px"></a>
+						<a target="_blank" href="http://www.linkedin.com/in/kamiboers"><img src="images/linkedin-icon.png" height="40px"></a>
 					</span>
 				</div>
 			</div>
@@ -82,10 +82,10 @@
 					<span class='project-header'>FitBeat</span>
 					<img src="images/fitbeatstatic.png" id="fitbeat" alt="FitBeat" class="project">
 					<div class="project-body">
-						A fitness music app consuming Fitbit and Spotify APIs. FitBeat pulls in daily heart rate data, displays it on a dashboard and allows the user to create and populate Spotify playlists whose BPM falls within the ranges of Fitbit's exercise heart rate categories. This project uses Ruby on Rails, OAuth2 authorization, jQuery, RSpec, and VCR to test API interaction.
+						A fitness music app consuming Fitbit and Spotify APIs. FitBeat pulls in daily heart rate data, displays it on a dashboard and allows the user to create and populate Spotify playlists whose BPM falls within the ranges of Fitbit's exercise heart rate categories. Uses Ruby on Rails, OAuth2 authorization, jQuery, RSpec, and VCR to test API interaction.
 					</div>
 					<span class="project-links">
-						<br><a target="_blank" href="https://github.com/kamiboers/fitbeat">View on GitHub <img src="images/github-icon.png" width="20px"></a><br><a href="#">[ Production Demo <br>coming soon ]</a>
+						<br><a target="_blank" href="http://github.com/kamiboers/fitbeat">View on GitHub <img src="images/github-icon.png" width="20px"></a><br><a href="#">[ Production Demo <br>coming soon ]</a>
 					</span>
 				</div>
 
@@ -93,10 +93,10 @@
 					<span class='project-header'>Q*Bert</span>
 					<img src="images/qbertstatic.png" id="qbert" alt="Q*Bert" class="project">
 					<div class="project-body">
-						Classic arcade game replicated in client-side JavaScript during a ten day, three-person collaboration. Game tracks local high scores using local storage. Q*Bert also incorporates jQuery, CSS, and unit testing with Minitest, Mocha, and Chai.
+						Classic arcade game replicated in client-side JavaScript during a ten day, three-person collaboration. Tracks local high scores using local storage. Q*Bert also incorporates jQuery, CSS, and unit testing with Minitest, Mocha, and Chai.
 					</div>
 					<span class="project-links">
-						<br><a target="_blank" href="https://github.com/kamiboers/qbert">View on GitHub <img src="images/github-icon.png" width="20px"></a><br><a target="_blank" href="https://qbert.rocks">View in Production</a>
+						<br><a target="_blank" href="http://github.com/kamiboers/qbert">View on GitHub <img src="images/github-icon.png" width="20px"></a><br><a target="_blank" href="http://qbert.rocks">View in Production</a>
 						</span>
 				</div>
 
@@ -107,7 +107,7 @@
 						Single-page app to store and rate 'ideas'. Uses Rails to manage and serve data and JavaScript/jQuery for client-side interactions. All CRUD functionality is initiated via jQuery AJAX calls to the Rails server. Ideas can be edited inline, filtered by tags, and searched dynamically without page reload. jQuery is responsible for all DOM manipulation.
 					</div>
 					<span class="project-links">
-						<br><a target="_blank" href="https://github.com/kamiboers/ideabox">View on GitHub <img src="images/github-icon.png" width="20px"></a><br><a target="_blank" href="https://ideaboite.herokuapp.com/">View in Production</a>
+						<br><a target="_blank" href="http://github.com/kamiboers/ideabox">View on GitHub <img src="images/github-icon.png" width="20px"></a><br><a target="_blank" href="http://ideaboite.herokuapp.com/">View in Production</a>
 					</span>
 				</div>
 			</div>
@@ -134,17 +134,17 @@
 				<span class="icon-link spaced-link"><a target="_blank" href="kboers-resume.pdf">
 					<img src="images/resume-icon.png" height="40px"></a>
 				</span>
-				<span class="icon-link spaced-link"><a target="_blank" href="https://www.github.com/kamiboers">
+				<span class="icon-link spaced-link"><a target="_blank" href="http://www.github.com/kamiboers">
 					<img src="images/github-icon.png" height="40px"></a>
 				</span>
-				<span class="icon-link spaced-link"><a target="_blank" href="https://www.linkedin.com/in/kamiboers">
+				<span class="icon-link spaced-link"><a target="_blank" href="http://www.linkedin.com/in/kamiboers">
 					<img src="images/linkedin-icon.png" height="40px"></a>
 				</span>
 			</div>
 		</div>
 	</div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/page.js"></script>
 </body>
 
