--- a/splash.html
+++ b/splash.html
@@ -5,7 +5,6 @@
 	<title>Kami Boers, Web Developer</title>
 	<link rel="stylesheet" type="text/css" href="./css/reset.css">  
 	<link rel="stylesheet" type="text/css" href="./css/custom.css">  
-	<link rel="stylesheet" type="text/css" href="./css/animate.css">  
 </head>
 
 <body>
@@ -23,7 +22,7 @@
 		</div>
 	</div>
 
-	<div class="panel animated" id="about-panel">
+	<div class="panel" id="about-panel">
 		<div class="inner-panel">	
 			<div class="inner-panel-sidebar">
 				<img src="images/head2.png" class="headshot">
@@ -72,7 +71,7 @@
 		</div>
 	</div>
 
-	<div class="panel animated" id="code-panel">
+	<div class="panel" id="code-panel">
 		<div class="inner-panel panel-center">
 			<div class='title'>projects.<br><br>
 			</div>
@@ -119,7 +118,7 @@
 		</div>
 	</div>
 
-	<div class="panel animated" id="contact-panel">
+	<div class="panel" id="contact-panel">
 		<div class="inner-panel panel-center">
 			<div class='title'>get in touch.
 			</div>
