content switching stalled

--- a/splash.html
+++ b/splash.html
@@ -11,29 +11,29 @@
 <body>
 
 	<div class="backstretch"></div>
-	<div class="inner">
-			
-		<div id="sidebar">
-		  <div id="title">kami boers</div>
-		  <div class="links">
-		    <div id='about'><a href="#" class='side'>about.</a></div>
-		    <div id='code'><a href="#" class='side'>code.</a></div>
-		    <div id='contact'><a href="#" class='side'>contact.</a></div>
-		  </div>
-		  <div id="sidebar-transparent"></div>
-		</div>
 
+	<div class="inner-body">
+			
+	<div class="panel">
+		<div id="panel-content"></div>
 	</div>
 
-	<div class="panel" id="about-panel"></div>
+	<div class="sidebar">
+		<div class="sidebar-content">
+			<div class="sidebar-transparent"></div>
+		<div class="title">kami boers</div>
+		<div class="sidebar-links">
+  	<div class="sidebar-link" id="about"><a href="#">about.</a></div>
+  	<div class="sidebar-link" id="code"><a href="#">code.</a></div>
+  	<div class="sidebar-link" id="contact"><a href="#">contact.</a></div>
+	</div>
+		</div>
+	</div>
+	
+	</div>
 
-	<div class="panel" id="code-panel"></div>
-
-	<div class="panel" id="contact-panel"></div>
-
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="js/page.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="js/page.js"></script>
 </body>
 
 </html>
