page.js refactor

--- a/splash.html
+++ b/splash.html
@@ -14,8 +14,11 @@
 
 	<div class="inner-body">
 			
-	<div class="panel">
-		<div id="panel-content"></div>
+	
+	<div class="panel">	
+		<div class="panel-content" id="panel-about"></div>
+		<div class="panel-content" id="panel-code"></div>
+		<div class="panel-content" id="panel-contact"></div>
 	</div>
 
 	<div class="sidebar">
