contact panel refactor

--- a/splash.html
+++ b/splash.html
@@ -22,20 +22,21 @@
 	</div>
 
 	<div class="sidebar">
+		<div class="sidebar-transparent"></div>
 		<div class="sidebar-content">
-			<div class="sidebar-transparent"></div>
-		<div class="title">kami boers</div>
-		<div class="sidebar-links">
+		
+		<div class="sidebar-title">kami<br>boers</div>
+
   	<div class="sidebar-link" id="about"><a href="#">about.</a></div>
   	<div class="sidebar-link" id="code"><a href="#">code.</a></div>
   	<div class="sidebar-link" id="contact"><a href="#">contact.</a></div>
-	</div>
+
 		</div>
 	</div>
 	
 	</div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery-min.js"></script>
 <script type="text/javascript" src="js/page.js"></script>
 </body>
 
