desktop and intermediate responsive design

--- a/splash.html
+++ b/splash.html
@@ -25,11 +25,12 @@
 		<div class="sidebar-content">
 		<div class="sidebar-transparent"></div>
 		
-		<div class="sidebar-title">kami<br>boers</div>
+		<span class="sidebar-title">kami</span>
+		<span class="sidebar-title">boers</span>
 
-  	<div class="sidebar-link" id="about"><a href="#">about.</a></div>
-  	<div class="sidebar-link" id="code"><a href="#">code.</a></div>
-  	<div class="sidebar-link" id="contact"><a href="#">contact.</a></div>
+  	<span class="sidebar-link" id="about"><a href="#">about.</a></span>
+  	<span class="sidebar-link" id="code"><a href="#">code.</a></span>
+  	<span class="sidebar-link" id="contact"><a href="#">contact.</a></span>
 
 		</div>
 	</div>
