moble responsive design

--- a/splash.html
+++ b/splash.html
@@ -28,9 +28,11 @@
 		<span class="sidebar-title">kami</span>
 		<span class="sidebar-title">boers</span>
 
+		<span class="sidebar-links">  	
   	<span class="sidebar-link" id="about"><a href="#">about.</a></span>
   	<span class="sidebar-link" id="code"><a href="#">code.</a></span>
   	<span class="sidebar-link" id="contact"><a href="#">contact.</a></span>
+  	</span>
 
 		</div>
 	</div>
